--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -93,7 +93,7 @@
 #about
 {
     margin: 0px;
-    background-color: black;
+    background-color: white;
     background-image: url(/images/main1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
