--- a/aboutstyle.css
+++ b/aboutstyle.css
@@ -99,7 +99,7 @@
     background-size: cover;
 }
 #about-text{
-    color: rgb(255, 255, 255);
+    color: black;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     padding: 50px;
     font-size: 25px;
